syntax = "proto3";

package controlplane.v1;

import "attestation/v1/crafting_state.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service PolicyEvaluationService {
  rpc Evaluate(PolicyEvaluationServiceEvaluateRequest) returns (PolicyEvaluationServiceEvaluateResponse);
}

message PolicyEvaluationServiceEvaluateRequest {
  string policy_reference = 1 [(buf.validate.field).string.min_len = 1];
  map<string, string> inputs = 2;
}

message PolicyEvaluationServiceEvaluateResponse {
  attestation.v1.PolicyEvaluation result = 1;
}
