//
// Copyright 2025 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package service

import (
	"context"

	pb "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1"
	"github.com/chainloop-dev/chainloop/app/controlplane/pkg/biz"
)

type PolicyEvaluationService struct {
	pb.UnimplementedPolicyEvaluationServiceServer
	*service

	uc *biz.PolicyEvaluationUseCase
}

func NewPolicyEvaluationService(uc *biz.PolicyEvaluationUseCase, opts ...NewOpt) *PolicyEvaluationService {
	return &PolicyEvaluationService{
		service: newService(opts...),
		uc:      uc,
	}
}

func (s *PolicyEvaluationService) Evaluate(ctx context.Context, req *pb.PolicyEvaluationServiceEvaluateRequest) (*pb.PolicyEvaluationServiceEvaluateResponse, error) {
	// Verify current org is set (middleware handles this)
	_, err := requireCurrentOrg(ctx)
	if err != nil {
		return nil, err
	}

	// Call business layer to evaluate the policy
	result, err := s.uc.Evaluate(ctx, &biz.PolicyEvaluationEvaluateOpts{
		PolicyReference: req.PolicyReference,
		Inputs:          req.Inputs,
	})
	if err != nil {
		return nil, handleUseCaseErr(err, s.log)
	}

	return &pb.PolicyEvaluationServiceEvaluateResponse{
		Result: result,
	}, nil
}
